# ICP_Project

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  GameCallbacks.cpp  GameInit.cpp  ICP.vcxproj  ICP.vcxproj.filters  Map.cpp  Map.h  Mesh.cpp  Mesh.h  OBJloader.cpp  OBJloader.h  README.md  RedColourTracker.cpp  RedColourTracker.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Vertex.h  icp.cpp  synced_dequeue.cpp  synced_dequeue.h
resources/shaders/: obj.frag  obj.vert
